log
Sun Oct 18 17:46:30 UTC 2020: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:11: error: redefinition of ‘list’
     List* list=createList();
           ^~~~
sudoku.c:52:11: note: previous definition of ‘list’ was here
     List* list=createList();
           ^~~~
Compilation failed
Sun Oct 18 17:47:00 UTC 2020: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  2|4
total_score: 15/70
c6beceb
Sun Oct 18 18:06:16 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
82995a4
Sun Oct 18 18:06:25 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d9284fe
Sun Oct 18 18:07:12 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9032f06
Sun Oct 18 18:08:12 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5cccc9b
Sun Oct 18 18:08:18 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8024cc1
